# currennt_nlm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_cookie.txt  CMakeLists_tsubame.txt  Makefile  README.md  cmake_install.cmake
currennt/src/: main.cpp  main_nlm.cpp
currennt_lib/src/: Configuration.cpp  Configuration.hpp  LayerFactory.cu  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkLM.cpp  NeuralNetworkLM.hpp  Types.hpp
currennt_lib/src/corpus/: Corpus.cpp  Corpus.hpp  CorpusFraction.cpp  CorpusFraction.hpp
currennt_lib/src/data_sets/: DataSet.cpp  DataSet.hpp  DataSetFraction.cpp  DataSetFraction.hpp
currennt_lib/src/helpers/: Matrix.cu  blas.cpp  blas.hpp
currennt_lib/src/layers/: BinaryClassificationLayer.cu  BinaryClassificationLayer.hpp  InputLayer.cpp  (+27 more)
examples/rnnlm/: config.cfg  network.jsn
lmOptimizers/: lmOptimizer.cu  lmSteepestDescentOptimizer.cu
lmOptimizers_now/: lmOptimizer.hpp  lmSteepestDescentOptimizer.hpp
mpi/: mpimap.cpp  mpimap.hpp  mpiumap.cpp  mpiumap.hpp
mpi_learning/: Makefile  main_nlm.cpp
scripts/: CMakeCache.txt  CMakeLists.txt  Makefile  README  average_weight.cpp  cmake_install.cmake  lookupWeight_from_word2vec  lookupWeight_from_word2vec.cpp  weight_to_word2vec.cpp
tempsrc/: ComparingLayerClassificationLayer.cu  ComparingLayerClassificationLayer.hpp
wsd/: CMakeLists.txt  wsd.cpp
wsd/configs/: Evaluate_nnlm.sh  cfg.cfg  config.cfg  config2.cfg  config_val.cfg  grid_threshold.sh  network3.jsn
wsd/src/: consistent_wsd.cpp  consistent_wsd.hpp  wsdDocument.cpp  wsdDocument.hpp  wsdutil.cpp  wsdutil.hpp
(+14 files in other folders)
